project/IaC-04/west_implement_sg.tf


resource "aws_security_group" "allow_all_in_west" {
  name        = "allow_all_in_west"
  description = "Allow all inbound traffic"
  vpc_id      = "${module.west-vpc.vpc_id}"

  provider = "aws.usw2"

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }


  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 8080
    to_port         = 8080
    protocol        = "tcp"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}
